--- a/LaTeXi/bibliography.bib
+++ b/LaTeXi/bibliography.bib
@@ -56,3 +56,13 @@
     url =         {https://appen.com/datasets/audio-recording-and-transcription-for-medical-scenarios/},
     year         = {2019}
 }
+@article{paper:hochreiter1997long,
+    title={Long short-term memory},
+    author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
+    journal={Neural computation},
+    volume={9},
+    number={8},
+    pages={1735--1780},
+    year={1997},
+    publisher={MIT Press}
+}
