Added video links and github refs

--- a/LaTeXi/bibliography.bib
+++ b/LaTeXi/bibliography.bib
@@ -66,3 +66,9 @@
     year={1997},
     publisher={MIT Press}
 }
+@misc{media:videos,
+    author       = {Simone Montali},
+    title        = {Video dell'interazione con il bot},
+    url =         {https://github.com/montali/tesi/tree/master/Resources/videos},
+    year         = {2020}
+}
