--- a/LaTeXi/fallback.tex
+++ b/LaTeXi/fallback.tex
@@ -171,7 +171,7 @@ def handle_fallback(self, message):
         self.med_record["main_symptom"] = symptom["name"]
         self.med_record["code"] = symptom["code"]
 \end{minted}
-Ora il nostro bot, in caso di mancato riconoscimento del sintomo, potrà comunque indirizzare il paziente in modo automatizzato.
+Ora il nostro bot, in caso di mancato riconoscimento del sintomo, potrà comunque indirizzare il paziente in modo automatizzato. La conversazione è ascoltabile nei video disponibili sulla repo GitHub\cite{media:videos}.
 \section{Esempio di conversazione}
 Riportiamo ora un esempio di conversazione realmente avvenuto.
 \begin{itemize}
