--- a/LaTeXi/informations.tex
+++ b/LaTeXi/informations.tex
@@ -123,7 +123,7 @@ Il bot è ora in grado di tenere conversazioni con i pazienti al riguardo di mal
     \item \textit{"Ecco ciò che so: la celiachia è una condizione multifattoriale, [testo accorciato per motivi di stampa]"}
 \end{itemize}
 \section{Esempio di conversazione}
-Riportiamo ora un esempio di conversazione realmente avvenuto.
+Riportiamo ora un esempio di conversazione realmente avvenuto. La conversazione è ascoltabile nei video disponibili sulla repo GitHub\cite{media:videos}.
 \begin{itemize}
     \item \textbf{Utente:} \textit{Cosa sai dirmi sul tumore al fegato?}
     \item \textbf{Bot:} \textit{Il miglior risultato è Tumore del Fegato, è ciò che cercavi?}
