--- a/LaTeXi/introduzione.tex
+++ b/LaTeXi/introduzione.tex
@@ -4,4 +4,11 @@ In una società sempre più digitalizzata e dinamica, spesso viene a crearsi un 
 Per questo motivo, spesso non si notano le evidenti possibilità di miglioramenti che la ricerca informatica potrebbe apportare agli ospedali, agli ambulatori, agli studi.
 L'obiettivo di questa tesi è mettere in luce una delle possibili modalità con cui l'informatica potrebbe, in un futuro prossimo, migliorare la praticità ma soprattutto la sicurezza degli ambienti ospedalieri.\\
 La procedura di triage, ossia il processo di selezione dei pazienti richiedenti cure, è oggi affidata totalmente ad infermieri. Questa scelta è dovuta, oltre ad un evidente bisogno di poter osservare il paziente, alla necessità dell'\textbf{immediatezza di un contatto verbale} con il personale sanitario. \\
-Perciò, la sfida nella realizzazione della tesi è soprattutto legata ad ottenere un'interazione che sia la \textbf{più umana possibile}. Il bot deve quindi accogliere il paziente, comprenderne le problematiche ed i sintomi, e farlo sentire compreso. Non si escluderà del tutto un apporto umano: gli infermieri sono addestrati per poter osservare e comprendere il richiedente cura, e l'apporto dell'osservazione diretta del paziente è ancora troppo importante per escluderla. È senz'altro possibile, però, affidare la prima parte di \textbf{profilazione dell'utente} a procedure automatizzate.
+Perciò, la sfida nella realizzazione della tesi è soprattutto legata ad ottenere un'interazione che sia la \textbf{più umana possibile}. Il bot deve quindi accogliere il paziente, comprenderne le problematiche ed i sintomi, e farlo sentire compreso. Non si escluderà del tutto un apporto umano: gli infermieri sono addestrati per poter osservare e comprendere il richiedente cura, e l'apporto dell'osservazione diretta del paziente è ancora troppo importante per escluderla. È senz'altro possibile, però, affidare la prima parte di \textbf{profilazione dell'utente} a procedure automatizzate.\\
+Tutto il codice di questa tesi è open source con licenza GPL-3.0, ed è reperibile su GitHub nelle seguenti repository:
+\begin{itemize}
+    \item Questo documento: \href{https://github.com/montali/tesi}{montali/tesi}
+    \item Skill di Mycroft per diagnosi e informazioni (capitolo \ref{chap:skills}) \href{https://github.com/montali/hospital-triage-skill}{montali/hospital-triage-skill}
+    \item Skill fallback di Mycroft per il riconoscimento di sintomatologie tramite NLP (capitolo \ref{chap:fallback}) \href{https://github.com/montali/hospital-fallback-skill}{montali/hospital-fallback-skill}
+    \item Scraper dell'Enciclopedia Medica del Ministero della Salute (capitolo \ref{chap:informations}) \href{https://github.com/montali/medical-infos-api}{montali/medical-infos-api}
+\end{itemize}
