--- a/LaTeXi/skills.tex
+++ b/LaTeXi/skills.tex
@@ -229,7 +229,7 @@ self.med_record = {}
 Questo formato standard permette di essere integrato semplicemente con infrastrutture preesistenti. Per esempio, un paziente affetto da COVID19 potrebbe avere la seguente scheda clinica:
 \inputminted{json}{code/med_record.json}
 \section{Esempio di conversazione}
-Riportiamo ora un esempio di conversazione realmente avvenuto.
+Riportiamo ora un esempio di conversazione realmente avvenuto. La conversazione è ascoltabile nei video disponibili sulla repo GitHub\cite{media:videos}.
 \begin{itemize}
     \item \textbf{Utente:} \textit{Puoi aiutarmi?}
     \item \textbf{Bot:} \textit{Prima di tutto, è lei ad avere bisogno?}
